Added new route for deleting todos

--- a/templates/list.html
+++ b/templates/list.html
@@ -20,7 +20,7 @@
     <ul>
       {% for todo in lst.todos %}
         <li class="{{'complete' if todo.completed else ''}}">
-          <form action="/lists/{{ lst.id }}/todos/{{ todo.id }}/toggle"
+          <form action="{{ url_for('update_todo_status', list_id=lst.id, todo_id=todo.id) }}"
                 method="post" class="check">
             <input type="hidden" name="completed"
                   value="{{ not todo.completed }}" />
@@ -28,7 +28,7 @@
           </form>
           <h3>{{ todo['title'] }}</h3>
           <form class="delete"
-                action="/lists/{{ lst.id }}/todos/{{ todo.id }}/delete"
+                action="{{ url_for('delete_todo', list_id=lst.id, todo_id=todo.id) }}"
                 method="post">
             <button type="submit">Delete</button>
           </form>
@@ -38,7 +38,7 @@
 
   </section>
 
-  <form action="/lists/{{ lst.id }}/todos" method="post">
+  <form action="{{ url_for('create_new_todo', list_id=lst.id) }}" method="post">
     <dl>
       <dt>
         <label for="todo">Enter a new todo item:</label>
