--- a/templates/edit_list.html
+++ b/templates/edit_list.html
@@ -1,27 +1,31 @@
 {% extends 'layout.html' %}
+
 {% block content %}
   <section id="todos">
     <header>
-      <h2>Editing {{ lst.title }}</h2>
+      <h2>Editing '{{ lst.title }}'</h2>
       <ul>
         <li>
-          <a class="delete" href="{{ url_for('delete_list', list_id=lst.id) }}">Delete List</a>
+          <form class="delete" action="{{ url_for('delete_list', list_id=lst.id) }}" method="post">
+            <button type="submit" class="delete">Delete List</button>
+          </form>
         </li>
       </ul>
     </header>
   </section>
+
   <form action="{{ url_for('update_list', list_id=lst.id) }}" method="post">
     <dl>
       <dt>
-        <label for="todo">Enter the new title for the list:</label>
+        <label for="list_title">Enter the new title for the list:</label>
       </dt>
       <dd>
-        <input name="list_title" id="todo" placeholder="{{ lst.title }}" type="text"
+        <input id="list_title" name="list_title" placeholder="{{ lst.title }}" type="text"
                value="{{ title if title is defined else lst.title }}">
       </dd>
     </dl>
     <fieldset class="actions">
-      <input type="submit" value="Add">
+      <input type="submit" value="Save">
       <a href="{{ url_for('show_list', list_id=lst.id) }}">Cancel</a>
     </fieldset>
   </form>
