Refactor: Decorated the create_new_todo route

--- a/templates/list.html
+++ b/templates/list.html
@@ -7,7 +7,7 @@
       <ul>
         <li>
           <form class="complete_all"
-                action="/lists/{{ lst.id }}/complete_all"
+                action="{{ url_for('mark_all_todos_completed', list_id=lst.id) }}"
                 method="post">
             <button class="check" type="submit">Complete All</button>
           </form>
@@ -45,7 +45,7 @@
       </dt>
       <dd>
         <input name="todo" id="todo" placeholder="Something to do" type="text"
-               value="{{ request.form['todo'] }}">
+               value="{{ request.form.get('todo', '') }}">
       </dd>
     </dl>
     <fieldset class="actions">
